cluster/sonarqube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sonarqube
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"sonarqube:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"sonarqube\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: sonarqube
    app.kubernetes.io/component: sonarqube
    app.kubernetes.io/instance: sonarqube
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sonarqube
  strategy: {}
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: sonarqube
    spec:
      containers:
      - image: >-
          sonarqube@sha256:03aa10991cf77db09907a3a105d2c00c6432763c2f7f100210cc0c8d1e42f1e1
        name: sonarqube
        ports:
        - containerPort: 9000
          protocol: TCP
        resources: {}
